--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=todo-managment
 spring.datasource.url=jdbc:mysql://localhost:3306/todo_management
+spring.datasource.username=root
+
