--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=Mysql@todo
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
+spring.jpa.hibernate.ddl-auto=update
