--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=todo-managment
 spring.datasource.url=jdbc:mysql://localhost:3306/todo_management
 spring.datasource.username=root
-spring.datasource.password=Mysql@todo
+spring.datasource.password=m37288208@
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
